--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-scripts": "^2.1.8"
